# transcription-engine

./: .gitignore  .pre-commit-config.yaml  BUILD_PROGRESS_SUMMARY.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_COMPLETION_REPORT.md  FINAL_SETUP_GUIDE.md  MANUAL_SETUP_COMPLETE.md  PRODUCTION_CHECKLIST.md  PROJECT_DOCUMENTATION.md  QWEN.md  README.md  SERVER_STATUS.md  SoutiAI_Transcription_Engine_Colab.ipynb  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env-example.txt  health_check_report.json  mock-backend.js  package-lock.json  project_summary.json  pyproject.toml  quick_start.py  run_migrations.py  setup_manual.ps1  start_dev.py  start_server.ps1
.github/workflows/: ci-cd.yml
backend/: Dockerfile  Dockerfile.cpu  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: jobs.py  qa.py  streaming.py  upload.py  voice_analytics.py  websocket.py
backend/app/core/: exceptions.py  logging.py  monitoring.py  security.py  storage.py  validation.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  job.py
backend/app/models/: job.py
backend/app/services/: dialect_detection_service.py  job_service.py  rag_service.py  streaming_service.py  summarization_service.py  transcription_service.py  translation_service.py  tts_service.py  voice_analytics_service.py  websocket_manager.py
backend/app/tasks/: celery_app.py  transcription_tasks.py
backend/app/utils/: audio.py  download.py  text.py
backend/scripts/: evaluate_egyptian_accuracy.py  finetune_whisper_egyptian.py  populate_knowledge_base.py  prepare_egyptian_dataset.py  startup_check.py  train_dialect_detector.py
backend/tests/: conftest.py  test_api_endpoints.py  test_health.py  test_integration.py  test_rag.py  test_streaming.py  test_text_utils.py  test_transcription_service.py  test_translation_summarization.py  test_voice_analytics.py
backend/uploads/: 37e2b745-8390-4527-8e43-c4ee7da81abf_downloaded  4e51f077-37fd-4e17-a402-9092b7714d30_downloaded
doc/notes/: junior-developer-learning-guide.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  EGYPTIAN_DIALECT_FINETUNING.md  FAQ.md  MIGRATION.md  PERFORMANCE.md  PRODUCTION_DEPLOYMENT.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
docs/notes/: README.md  best-practices.md  code-examples.md
frontend/: Dockerfile  Dockerfile.dev  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.test.js  theme.js
frontend/src/components/: AnalyticsDashboard.js  ErrorBoundary.js  Footer.js  Header.js  InteractiveTranscript.js  LoadingSpinner.js  SearchAndFilter.js  SkeletonLoader.js  Timeline.js
frontend/src/hooks/: useApi.js
frontend/src/pages/: Dashboard.js  Dashboard.test.js  Help.js  JobDetails.js  NotFound.js  Settings.js  Streaming.js  Upload.js
frontend/src/utils/: helpers.js
k8s/: api.yaml  chroma.yaml  configmap.yaml  frontend.yaml  hpa.yaml  kustomization.yaml  minio.yaml  namespace.yaml  postgres.yaml  rbac.yaml  redis.yaml  secret.yaml  worker.yaml
monitoring/: prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: transcription-engine.json
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/postgres/: postgresql.conf
monitoring/prometheus/: prometheus.yml  rules.yml
monitoring/traefik/: traefik.yml
scripts/: deploy-k8s.sh  deploy.sh  final-project-summary.py  project-health-check.py  project-status.sh
